bitbake.conf: assign OLDEST_KERNEL weakly

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -396,7 +396,7 @@ SDKPATHNATIVE = "${SDKPATH}/sysroots/${SDK_SYS}"
 # Kernel info.
 ##################################################################
 
-OLDEST_KERNEL = "2.6.32"
+OLDEST_KERNEL ??= "2.6.32"
 STAGING_KERNEL_DIR = "${TMPDIR}/work-shared/${MACHINE}/kernel-source"
 STAGING_KERNEL_BUILDDIR = "${TMPDIR}/work-shared/${MACHINE}/kernel-build-artifacts"
 
